--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <div class="footer_block"></div>
                 <div class="footer_icon"></div>
                 <div class="footer_text"></div>
+                <div class="footer_fix"></div>
             </div>
 
 </body>
