--- a/index.html
+++ b/index.html
@@ -13,52 +13,34 @@
 </head>
 
 <body>
-    <div class="bg_image">
-        <div class="container">
-            <div class="container_head">
-                <div class="container_up">
-                    <div class="container_up_block">
-                        <div class="container_up_block_buttons">
-                            <div class="container_up_button_menu"><button class="button_menu_style">Menu</button>
-                            </div>
-                            <div class="container_up_button_settings"><button
-                                    class="button_settings_style">Settings</button></div>
-                            <div class="container_up_button_about"><button class="button_about_style">About</button>
-                            </div>
-                        </div>
-
-                        <div class="container_up_icon"></div>
+    <div class="container">
+        <div class="header">
+            <div class="container_up_block">
+                <div class="container_up_block_buttons">
+                    <div class="container_up_button_menu"><button class="button_menu_style">Menu</button>
+                    </div>
+                    <div class="container_up_button_settings"><button
+                            class="button_settings_style">Settings</button></div>
+                    <div class="container_up_button_about"><button class="button_about_style">About</button>
                     </div>
                 </div>
 
-
-                <div class="container_down">
-                    <div class="container_down_text">
-                        <h1 class="container_down_text_style">Victus</h1>
-                    </div>
-                    <div class="container_down_block">
-                        <div class="caontainer_down_block_text_style"></div>
-                    </div>
-                    <div class="container_down_icon"></div>
-                    <div class="container_down_text"></div>
-
-                </div>
-                <div class="main">
-                    <div class="main_text_style">
-                        <div class="main_text">
-                        </div>
-                    </div>
-                    <div class="main_image_style">
-                        <div class="main_image"></div>
-                    </div>
-                </div>
+                <div class="container_up_icon"></div>
             </div>
-            <div class="footer">
-                <div class="footer_block"></div>
-                <div class="footer_icon"></div>
-                <div class="footer_text"></div>
-            </div>
+        </div>
 
+        <main>
+            <div class="container_down_text">
+                <h1 class="container_down_text_style">Victus</h1>
+            </div>
+            <div class="content">
+
+            </div>
+        </main>
+
+        <footer>
+
+        </footer>
+    </div>
 </body>
-
 </html>
