--- a/index.html
+++ b/index.html
@@ -1,46 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Smooch&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Smooch&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 5</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <div class="header">
-            <div class="container_up_block">
-                <div class="container_up_block_buttons">
-                    <div class="container_up_button_menu"><button class="button_menu_style">Menu</button>
-                    </div>
-                    <div class="container_up_button_settings"><button
-                            class="button_settings_style">Settings</button></div>
-                    <div class="container_up_button_about"><button class="button_about_style">About</button>
-                    </div>
-                </div>
-
-                <div class="container_up_icon"></div>
+      <div class="header">
+        <div class="container_up_block">
+          <div class="container_up_block_buttons">
+            <div class="container_up_button_menu">
+              <button class="button_menu_style">Menu</button>
             </div>
+            <div class="container_up_button_settings">
+              <button class="button_settings_style">Settings</button>
+            </div>
+            <div class="container_up_button_about">
+              <button class="button_about_style">About</button>
+            </div>
+          </div>
+
+          <div class="container_up_icon"></div>
         </div>
+      </div>
 
-        <main>
-            <div class="container_down_text">
-                <h1 class="container_down_text_style">Victus</h1>
-            </div>
-            <div class="content">
+      <main>
+        <div class="container_down_text">
+          <h1 class="container_down_text_style">Victus</h1>
+        </div>
+        <div class="content_main_down"><p class="container_main_down_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis placeat eaque, vero, accusantium deserunt tenetur, repellendus possimus illum expedita debitis nihil voluptatum nemo at asperiores obcaecati enim. Iure, ex numquam.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis placeat eaque, vero, accusantium deserunt tenetur, repellendus possimus illum expedita debitis nihil voluptatum nemo at asperiores obcaecati enim. Iure, ex numquam</p></div>
+      </main>
 
-            </div>
-        </main>
-
-        <footer>
-
-        </footer>
+      <footer>
+        <a href="https://www.instagram.com/victus.by/" target="_blank">
+            <img class="img_instagram" src="insatgram_icon.png"  alt="" /> 
+        </a>
+        <a href="https://vk.com/vada17" target="_blank"><img class="vk_img" src="vk_img.png" alt=""></a>
+      </footer>
     </div>
-</body>
+  </body>
 </html>
