--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div class="header">
         <div class="container_up_block">
           <div class="container_up_block_buttons">
+            <!-- <img class="icon_menu" src="icon_menu.png" alt=""> -->
             <div class="container_up_button_menu">
               <button class="button_menu_style">Menu</button>
             </div>
