--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
       </div>
 
       <main>
+        <!-- <div class="img_main">
+        <img src="01.jpg" alt="">
+        <img src="02.jpg" alt="">
+        <img src="03.jpg" alt="">
+        <img src="04.jpg" alt="">
+        <img src="05.jpg" alt="">
+        <img src="06.jpg" alt="">
+        </div> -->
         <div class="container_down_text">
           <h1 class="container_down_text_style">Victus</h1>
         </div>
