--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="header">
         <div class="container_up_block">
           <div class="container_up_block_buttons">
-            <!-- <img class="icon_menu" src="icon_menu.png" alt=""> -->
+            <!-- <img class="icon_menu" src="img/icon_menu.png" alt=""> -->
             <div class="container_up_button_menu">
               <button class="button_menu_style">Menu</button>
             </div>
@@ -37,12 +37,12 @@
 
       <main>
         <!-- <div class="img_main">
-        <img src="01.jpg" alt="">
-        <img src="02.jpg" alt="">
-        <img src="03.jpg" alt="">
-        <img src="04.jpg" alt="">
-        <img src="05.jpg" alt="">
-        <img src="06.jpg" alt="">
+        <img src="img/01.jpg" alt="">
+        <img src="img/02.jpg" alt="">
+        <img src="img/03.jpg" alt="">
+        <img src="img/04.jpg" alt="">
+        <img src="img/05.jpg" alt="">
+        <img src="img/06.jpg" alt="">
         </div> -->
         <div class="container_down_text">
           <h1 class="container_down_text_style">Victus</h1>
@@ -52,9 +52,9 @@
 
       <footer>
         <a href="https://www.instagram.com/victus.by/" target="_blank">
-            <img class="img_instagram" src="insatgram_icon.png"  alt="" /> 
+            <img class="img_instagram" src="img/insatgram_icon.png"  alt="" /> 
         </a>
-        <a href="https://vk.com/vada17" target="_blank"><img class="vk_img" src="vk_img.png" alt=""></a>
+        <a href="https://vk.com/vada17" target="_blank"><img class="vk_img" src="img/vk_img.png" alt=""></a>
       </footer>
     </div>
   </body>
