--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       <div class="header">
         <div class="container_up_block">
           <div class="container_up_block_buttons">
-            <!-- <img class="icon_menu" src="img/icon_menu.png" alt=""> -->
             <div class="container_up_button_menu">
               <button class="button_menu_style">Menu</button>
             </div>
@@ -39,14 +38,30 @@
         <div class="container_down_text">
           <h1 class="container_down_text_style">Victus</h1>
         </div>
-        <div class="content_main_down"><p class="container_main_down_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis placeat eaque, vero, accusantium deserunt tenetur, repellendus possimus illum expedita debitis nihil voluptatum nemo at asperiores obcaecati enim. Iure, ex numquam.Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis placeat eaque, vero, accusantium deserunt tenetur, repellendus possimus illum expedita debitis nihil voluptatum nemo at asperiores obcaecati enim. Iure, ex numquam</p></div>
+        <div class="content_main_down">
+          <div class="image_page_1"><img src="" alt=""></div>
+          <div class="image_page_2"><img src="img/01.jpg" alt=""><img src="img/02.jpg" alt=""><img src="img/02" alt="">
+          <img src="img/03.jpg" alt=""></div>
+          <p class="container_main_down_text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis
+            placeat eaque, vero, accusantium deserunt tenetur, repellendus
+            possimus illum expedita debitis nihil voluptatum nemo at asperiores
+            obcaecati enim. Iure, ex numquam.Lorem ipsum dolor sit, amet
+            consectetur adipisicing elit. Reiciendis placeat eaque, vero,
+            accusantium deserunt tenetur, repellendus possimus illum expedita
+            debitis nihil voluptatum nemo at asperiores obcaecati enim. Iure, ex
+            numquam
+          </p>
+        </div>
       </main>
 
       <footer>
         <a href="https://www.instagram.com/victus.by/" target="_blank">
-            <img class="img_instagram" src="img/insatgram_icon.png"  alt="" /> 
+          <img class="img_instagram" src="img/insatgram_icon.png" alt="" />
         </a>
-        <a href="https://vk.com/vada17" target="_blank"><img class="vk_img" src="img/vk_img.png" alt=""></a>
+        <a href="https://vk.com/vada17" target="_blank"
+          ><img class="vk_img" src="img/vk_img.png" alt=""
+        /></a>
       </footer>
     </div>
   </body>
