--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
         <div class="container_down_text">
           <h1 class="container_down_text_style">Victus</h1>
         </div>
+        <div class="image_2"></div>
+        <div class="image_1"></div>
         <div class="content_main_down">
-          <!-- <div class="image_page_1"><img src="" alt=""></div>
-          <div class="image_page_2"><img src="img/01.jpg" alt=""><img src="img/02.jpg" alt=""><img src="img/02" alt="">
-          <img src="img/03.jpg" alt=""></div> -->
           <p class="container_main_down_text">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis
             placeat eaque, vero, accusantium deserunt tenetur, repellendus
