--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       </div>
 
       <main>
-        <!-- <div class="flex_image">
+        <div class="container_down_text">
+          <h1 class="container_down_text_style">Victus</h1>
+        </div>
+        <div class="flex_image">
           <div class="image_2"></div>
           <div class="image_1"></div>
           <div class="image_3"></div>
-        </div> -->
-        <div class="container_down_text">
-          <h1 class="container_down_text_style">Victus</h1>
         </div>
         <div class="content_main_down">
           <p class="container_main_down_text">
